alteration title with text 2.0

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <title>Course Bootstrap</title>
+    <title>Course Bootstrap 2.0</title>
   </head>
   <body>
     <header id="menu" class="navbar-header">
